# gtk-pass

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  gtk-pass.desktop
icons/: CMakeLists.txt
src/: CMakeLists.txt  config.hpp.in  entry-completion.cpp  entry-completion.hpp  entry-list.cpp  entry-list.hpp  main.cpp  pass.cpp  pass.hpp  password-store.cpp  password-store.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
